# Automated-Design-Evaluation-for-Manufacturability

./: .gitignore  CMakeLists.txt  DEMO_FIX_SUMMARY.md  DEMO_README.md  IMPLEMENTATION_SUMMARY.md  README.md  README.txt  STARTUP.md  cad_dfx_pipeline_srd.docx  cad_dfx_pipeline_srd.js  cube.off  demo.sh  environment.yml  escavator_arm-Assembly.step  escavator_arm.FCStd  fastAPI.py  hello.cpp  integration_example.py  main.cpp  requirements.txt  setup_modules.py  start_project.sh  stop_project.sh  test_status.py
config/: README.md
data/: FlandersMake_part-Merger.stl  FlandersMake_part.FCStd  FlandersMake_part_NOK-Merger.step  FlandersMake_part_NOK-Merger.stl  FlandersMake_part_NOK.FCStd  cube5.step  escavator_arm-Assembly.stl  simple_rib.step
docs/: Automated ISO Dimension & Tolerance Proposal Tool — Architecture & Strategy.odt  Automated ISO Dimension & Tolerance Proposal Tool — Architecture & Strategy.txt  Feature extraction from STEP CAD files.txt  Generative Design with FEA + DFM Rules Using Open-Source Tools — Without Expensive Optimization.odt  Generative Design with FEA + DFM Rules Using Open-Source Tools — Without Expensive Optimization.txt  Probabilistic Design Reliability Assessment: FEA + Statistical Methods.odt  Probabilistic Design Reliability Assessment: FEA + Statistical Methods.txt  Tolerance Stack-Up Calculator from CAD Files: A Proposal.odt  Tolerance Stack-Up Calculator from CAD Files: A Proposal.txt  YAML integration issues with legacy systems.odt  YAML integration issues with legacy systems.txt
examples/: GPS_iso8015_example.py  dimension_diameterHole_example.py  dimension_minimal_example.py  dimension_radiusFillet_example.py  fit_iso286_example.py  geoTol_iso1101_example.py  geometric_discontinuities_example.py  linTol_iso2768_example.py  load_step.py  normalize_shape.py  shape_dimension_example.py  surfRough_iso4287_4288_example.py  toleranceStackup_example.py  tolerance_advisor_example.py  view_steps.py
geometry/: README.md  __init__.py  brep_kernel.py  example_usage.py  geometry_kernel.py  geometry_kernel_layer2.html  mesh_kernel.py  tessellation.py
io/: README.md  __init__.py  io.py  step_reader.py
load_cad/: README.md  __init__.py  step_reader.py
physics/: convection_rectangular_channel.py  heatTransfer_contact_pressure.py
post_process/: README.md  __init__.py  dimension_minimal.py  dimension_minimal.txt  feature_detection.py  shape_dimension.py  shape_normalizer.py
reporting/: README.md  annotation_engine.py  example_usage.py  freecad_plugin.py  web_ui.py  (+2 more)
(+110 files in other folders)
